--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div>
             <h2>Choix du Ascii :</h2>
             <div>
-                <label><input type="radio" name="font" value="fichier">fichier</input></label>
+                <label><input type="radio" name="font" value="fichier">standard</input></label>
                 <label><input type="radio" name="font" value="thinkertoy">thinkertoy</input></label>
                 <label><input type="radio" name="font" value="shadow">shadow</input></label>
             </div>
@@ -50,10 +50,10 @@
         <div>
             <h2>Alignement :</h2>
             <div>
-                <label><input type="radio" name="font" value="gauche">gauche</input></label>
-                <label><input type="radio" name="font" value="centré">centré</input></label>
-                <label><input type="radio" name="font" value="droite">droite</input></label>
-                <label><input type="radio" name="font" value="justifié">justifié</input></label>
+                <label><input type="radio" name="align" value="gauche">gauche</input></label>
+                <label><input type="radio" name="align" value="centré">centré</input></label>
+                <label><input type="radio" name="align" value="droite">droite</input></label>
+                <label><input type="radio" name="align" value="justifié">justifié</input></label>
             </div>
         </div>
     </div>
