--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div>
             <h2>Choix du Ascii :</h2>
             <div>
-                <label><input type="radio" name="font" value="fichier">standard</input></label>
-                <label><input type="radio" name="font" value="thinkertoy">thinkertoy</input></label>
-                <label><input type="radio" name="font" value="shadow">shadow</input></label>
+                <label><input onclick="afficherAscii()" type="radio" name="font" value="fichier">standard</input></label>
+                <label><input onclick="afficherAscii()" type="radio" name="font" value="thinkertoy">thinkertoy</input></label>
+                <label><input onclick="afficherAscii()" type="radio" name="font" value="shadow">shadow</input></label>
             </div>
         </div>
         <div>
