--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <br>
         Tout caractère non autorisé sera ignoré.
     </p>
-    <p>Vous pouvez également choisir la police d'écriture parmis celles disponibles.</p>
+    <p>Vous pouvez également choisir la police d'écriture parmi celles disponibles.</p>
+    <p>Vous pouvez également choisir la justification du texte.</p>
 
     <div id="main">
         <div>
@@ -42,18 +43,18 @@
         <div>
             <h2>Choix du Ascii :</h2>
             <div>
-                <label><input onclick="afficherAscii()" type="radio" name="font" value="fichier">standard</input></label>
-                <label><input onclick="afficherAscii()" type="radio" name="font" value="thinkertoy">thinkertoy</input></label>
-                <label><input onclick="afficherAscii()" type="radio" name="font" value="shadow">shadow</input></label>
+                <label onclick="afficherAscii()"><input type="radio" name="font" value="fichier">standard</input></label>
+                <label onclick="afficherAscii()"><input type="radio" name="font" value="thinkertoy">thinkertoy</input></label>
+                <label onclick="afficherAscii()"><input type="radio" name="font" value="shadow">shadow</input></label>
             </div>
         </div>
         <div>
             <h2>Alignement :</h2>
             <div>
-                <label><input type="radio" name="align" value="gauche">gauche</input></label>
-                <label><input type="radio" name="align" value="centré">centré</input></label>
-                <label><input type="radio" name="align" value="droite">droite</input></label>
-                <label><input type="radio" name="align" value="justifié">justifié</input></label>
+                <label onclick="afficherAscii()"><input type="radio" name="align" value="0">gauche</input></label>
+                <label onclick="afficherAscii()"><input type="radio" name="align" value="0 auto">centré</input></label>
+                <label onclick="afficherAscii()"><input type="radio" name="align" value="auto 0 auto auto">droite</input></label>
+                <label style="text-decoration: line-through;"><input type="radio" name="align" value="justifié">justifié</input></label>
             </div>
         </div>
     </div>
