--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="main">
         <div>
             <h2>Texte :</h2>
-            <textarea onkeyup="afficherAscii()" id="input"></textarea>
+            <textarea onkeyup="afficherAscii()" onfocus="checkBase()" id="input" placeholder="Votre Texte">Votre texte</textarea>
         </div>
         <div>
             <h2>Couleur du texte</h2>
